--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -5,10 +5,6 @@ name: Generate Sims
 on:
   workflow_dispatch:
 
-defaults:
-  run:
-    working-directory: static/beta
-
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -25,30 +21,18 @@ jobs:
           pip install requests
       - name: 1 target combo
         run: python generate_by_combo.py -t 1 $APIKEY
-      - name: 2 target combo
-        run: python generate_by_combo.py -t 2 $APIKEY
-      - name: 3 target combo
-        run: python generate_by_combo.py -t 3 $APIKEY
-      - name: 4 target combo
-        run: python generate_by_combo.py -t 4 $APIKEY
-      - name: 5 target combo
-        run: python generate_by_combo.py -t 5 $APIKEY
-      - name: dungeon combo
-        run: python generate_by_combo.py -t 0 $APIKEY
-      - name: 1t move combo
-        run: python generate_by_combo.py --target=-1 $APIKEY
-      - name: talent sims
-        run: python generate_by_talent.py $APIKEY
-      - name: update repo
-        run: git pull --rebase --autostash
       - name: commit changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: update sims
+        run: |
+          git config user Balance-SimC
+          git config email Balance-SimC@github.com
+          git pull --rebase --autostash
+          git add .
+          git commit -m "update sims"
+          git push
       - uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: generate_sims
           path: |
-            static/beta/by_*.html
-            static/beta/*.js
+            by_*.html
+            *.js
