--- a/.github/workflows/update_apl.yml
+++ b/.github/workflows/update_apl.yml
@@ -30,7 +30,7 @@ jobs:
           echo "[Balance] Update APL" > commit_msg
           echo >> commit_msg
           git log -1 --pretty=format:%B >> commit_msg
-          ecno >> commit_msg
+          echo >> commit_msg
           git log --format="Co-authored-by: %aN <%aE>" -1 >> commit_msg
           cd simc
           git config user.name Balance-SimC
