--- a/.github/workflows/update_apl.yml
+++ b/.github/workflows/update_apl.yml
@@ -30,12 +30,9 @@ jobs:
           echo "[Balance] Update APL" > commit_msg
           echo >> commit_msg
           git log -1 --pretty=format:%B >> commit_msg
-          echo >> commit_msg
-          echo >> commit_msg
-          git log --format="Co-authored-by: %aN <%aE>" -1 >> commit_msg
+          git config --global user.name $(git log -1 --format=%aN)
+          git config --global user.email $(git log -1 --format=%aE)
           cd simc
-          git config user.name Balance-SimC
-          git config user.email Balance-SimC@github.com
           git add .
           git commit -F ../commit_msg
           git push
