--- a/.github/workflows/update_apl.yml
+++ b/.github/workflows/update_apl.yml
@@ -27,8 +27,7 @@ jobs:
         run: python generate_apl.py "./simc"
       - name: commmit APL
         run: |
-          echo "[Balance]" > commit_msg
-          git log -1 --pretty=format:"%B%ngastank/Balance-SimC@%h" >> commit_msg
+          git log -1 --pretty=format:"%B%ngastank/Balance-SimC@%h" > commit_msg
           echo >> commit_msg
           echo >> commit_msg
           echo "Co-authored-by: Balance-SimC <Balance-SimC@github.com>" >> commit_msg
